--- a/portfolio-template/src/components/hero.css
+++ b/portfolio-template/src/components/hero.css
@@ -18,10 +18,37 @@
   background: #fafafa;
 }
 .user-info {
-  margin-top: 93px;
   margin-left: 60px;
+  margin-top: 93px;
   height: 118px;
   width: 500px;
 }
 .user-name {
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 700;
+}
+.color-text {
+  color: #ffb400;
+}
+.user-text {
+  margin-top: 18px;
+  width: 424px;
+  height: 88px;
+  font-weight: 400;
+  line-height: 24px;
+  font-size: 16px;
+  color: #767676;
+}
+.btn {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  color: #2b2b2b;
+  text-transform: uppercase;
+  border-radius: 4px;
+  background: #ffb400;
+  padding: 16px 32px;
+  border: 1px solid transparent;
 }
