--- a/portfolio-template/src/components/hero.css
+++ b/portfolio-template/src/components/hero.css
@@ -22,6 +22,18 @@
   margin-top: 93px;
   height: 118px;
   width: 500px;
+  position: relative;
+}
+.user-info::after {
+  content: "";
+  display: block;
+  width: 14px;
+  height: 14px;
+  top: -60px;
+  left: -28px;
+  border-radius: 50%;
+  position: absolute;
+  border: 2px solid #ffb400;
 }
 .user-name {
   font-size: 48px;
@@ -39,8 +51,23 @@
   line-height: 24px;
   font-size: 16px;
   color: #767676;
+  position: relative;
 }
+.user-text::after {
+  content: "";
+  display: block;
+  width: 14px;
+  height: 14px;
+  bottom: -2rem;
+  right: 5rem;
+  position: absolute;
+  transform: rotate(26.05deg);
+  border: 2px solid #0047ff;
+}
+
 .btn {
+  position: relative;
+  cursor: pointer;
   display: flex;
   align-items: center;
   text-align: center;
@@ -51,4 +78,15 @@
   background: #ffb400;
   padding: 16px 32px;
   border: 1px solid transparent;
+}
+.btn::after {
+  content: "";
+  display: block;
+  width: 14px;
+  height: 14px;
+  bottom: -3.2rem;
+  left: 28px;
+  border-radius: 50%;
+  position: absolute;
+  border: 2px solid #05ff00;
 }
