--- a/portfolio-template/src/components/middle/hero.css
+++ b/portfolio-template/src/components/middle/hero.css
@@ -1,21 +1,12 @@
-.container {
-  display: grid;
-  grid-template-columns: 305px 970px 108px;
-  column-gap: 20px;
-}
-.right-hero {
-  height: 1315px;
-  background: #fff;
-}
 .middle-hero {
   width: 100%;
   height: 467px;
   background: #fff;
 }
-.left-hero {
-  width: 100%;
-  height: 1315px;
-  background: #fafafa;
+.user-section {
+  width: 930px;
+  display: flex;
+  justify-content: space-between;
 }
 .user-info {
   margin-left: 60px;
@@ -73,6 +64,7 @@
   text-align: center;
   justify-content: center;
   color: #2b2b2b;
+  margin-top: 20px;
   text-transform: uppercase;
   border-radius: 4px;
   background: #ffb400;
@@ -89,4 +81,7 @@
   border-radius: 50%;
   position: absolute;
   border: 2px solid #05ff00;
+}
+.img {
+  margin-top: 10px;
 }
