--- a/portfolio-template/src/components/middle/hero.css
+++ b/portfolio-template/src/components/middle/hero.css
@@ -4,7 +4,7 @@
   background: #fff;
 }
 .user-section {
-  width: 930px;
+  width: 900px;
   display: flex;
   justify-content: space-between;
 }
@@ -82,6 +82,33 @@
   position: absolute;
   border: 2px solid #05ff00;
 }
+.user-image {
+  position: relative;
+}
 .img {
   margin-top: 10px;
+}
+.user-image::before {
+  content: "";
+  display: block;
+  width: 14px;
+  height: 14px;
+  top: 3.2rem;
+  right: 28px;
+  position: absolute;
+  transform: rotate(26deg);
+  border: 2px solid #ffb400;
+}
+.user-image::after {
+  content: "";
+  display: block;
+  width: 14px;
+  height: 14px;
+  bottom: 3.2rem;
+  right: -28px;
+  position: absolute;
+  border: 2px #ffb400;
+  background: #05ff00;
+  overflow: hidden;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 }
