--- a/portfolio-template/src/components/left/left-hero.css
+++ b/portfolio-template/src/components/left/left-hero.css
@@ -1,21 +1,53 @@
 .left-hero {
   width: 100%;
   height: 1315px;
-  background: #fafafa;
+  background: #fff;
+}
+.profile-bar {
+  width: 90%;
+  margin: 0 auto;
 }
 .img-bar {
-  /* margin-top: 3rem; */
+  padding-top: 3rem;
+  margin: 0 auto;
   width: 150px;
   height: 150px;
+  position: relative;
+}
+.img-bar::after {
+  content: "";
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  bottom: -2rem;
+  right: 0.8rem;
+  border-radius: 50%;
+  background: #7eb942;
 }
 .profile-img {
   width: 100%;
   height: 150px;
   border-radius: 50%;
-  /* overflow: hidden; */
-  /* background: #fafafa; */
-  /* background-image: url("../../img/profile-pics.png"); */
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.profile-name h4 {
+  color: #2b2b2b;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 123.6%;
+  text-transform: capitalize;
+  text-align: center;
+  margin-top: 4rem;
+}
+.profile-name p {
+  text-align: center;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  text-transform: capitalize;
+  color: #767676;
+  margin: 0.8rem 0;
 }
