--- a/portfolio-template/src/components/middle/hero.css
+++ b/portfolio-template/src/components/middle/hero.css
@@ -112,3 +112,9 @@
   overflow: hidden;
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 }
+.arrow__right {
+  margin-left: 8px;
+  width: 16px;
+  height: 16px;
+  color: rgba(43, 43, 43, 0.8);
+}
