--- a/portfolio-template/src/components/left/left-hero.css
+++ b/portfolio-template/src/components/left/left-hero.css
@@ -1,6 +1,6 @@
 .left-hero {
   width: 100%;
-  height: 1315px;
+  /* height: 1315px; */
   background: #fff;
 }
 .profile-bar {
@@ -49,5 +49,5 @@
   line-height: 24px;
   text-transform: capitalize;
   color: #767676;
-  margin: 0.8rem 0;
+  margin: 0.6rem 0;
 }
