--- a/portfolio-template/src/components/dounload__cv/cv.css
+++ b/portfolio-template/src/components/dounload__cv/cv.css
@@ -6,7 +6,7 @@
   width: 90%;
   color: #2b2b2b;
   font-weight: 500;
-  margin-bottom: 1.8rem;
+  margin: 1.8rem 0;
   background: #ffb400;
   padding: 0.8rem 0.6rem;
   text-transform: uppercase;
