--- a/portfolio-template/src/components/service/services.css
+++ b/portfolio-template/src/components/service/services.css
@@ -1,3 +1,67 @@
 .service__section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   /* background: #000; */
+  /* width: 970px; */
+  /* height: 655px; */
+}
+.service__header {
+  color: #2b2b2b;
+  font-weight: 700;
+  font-size: 32px;
+  text-transform: capitalize;
+  text-align: center;
+  margin-bottom: 1.6rem;
+  margin-top: 4rem;
+}
+.service__text {
+  width: 430px;
+  color: #767676;
+  line-height: 1.6rem;
+  text-align: center;
+  font-size: 15px;
+  margin-bottom: 3rem;
+  text-transform: capitalize;
+}
+.service__cards {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+.service__card {
+  background: #fff;
+  height: 225px;
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.service__card h3 {
+  font-size: 20px;
+  font-weight: 500;
+  text-transform: capitalize;
+  color: rgba(43, 43, 43, 0.809);
+}
+.service__card p {
+  color: #767676;
+  text-align: center;
+  text-transform: capitalize;
+}
+.service__card-icon {
+  font-size: 4rem;
+  font-weight: 100;
+  color: #ffb400;
+  stroke-width: 1.2px;
+}
+.service__card .color_text {
+  display: flex;
+  align-items: center;
+  color: #ffb400;
+  font-weight: 600;
+}
+.grater__icon {
+  font-size: 20px;
 }
