--- a/portfolio-template/src/components/dounload__cv/cv.css
+++ b/portfolio-template/src/components/dounload__cv/cv.css
@@ -5,6 +5,7 @@
 .download__btn {
   width: 90%;
   color: #2b2b2b;
+  cursor: pointer;
   font-weight: 500;
   margin: 1.8rem 0;
   background: #ffb400;
