--- a/portfolio-template/src/components/payments/payment.css
+++ b/portfolio-template/src/components/payments/payment.css
@@ -1,11 +1,11 @@
-.service__section {
+.payment__section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   /* background: #000; */
 }
-.service__header {
+.payment__header {
   color: #2b2b2b;
   font-weight: 700;
   font-size: 32px;
@@ -14,7 +14,7 @@
   margin-bottom: 1.6rem;
   margin-top: 4rem;
 }
-.service__text {
+.payment__text {
   width: 430px;
   color: #767676;
   line-height: 1.6rem;
@@ -23,12 +23,12 @@
   margin-bottom: 3rem;
   text-transform: capitalize;
 }
-.service__cards {
+.payment__cards {
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(3, 1fr);
 }
-.service__card {
+.payment__card {
   background: #fff;
   height: 225px;
   display: flex;
@@ -37,29 +37,23 @@
   justify-content: center;
   align-items: center;
 }
-.service__card h3 {
+.payment__card h3 {
   font-size: 20px;
   font-weight: 500;
   text-transform: capitalize;
   color: rgba(43, 43, 43, 0.809);
 }
-.service__card p {
+.payment__plan {
+  display: flex;
+  gap: 0.6rem;
+}
+.payment__plan span {
+  color: #2b2b2b;
+  align-self: flex-end;
+  text-transform: capitalize;
+}
+.payment__card p {
   color: #767676;
   text-align: center;
   text-transform: capitalize;
-}
-.service__card-icon {
-  font-size: 4rem;
-  font-weight: 100;
-  color: #ffb400;
-  stroke-width: 1.2px;
-}
-.service__card .color_text {
-  display: flex;
-  align-items: center;
-  color: #ffb400;
-  font-weight: 600;
-}
-.grater__icon {
-  font-size: 20px;
 }
