--- a/portfolio-template/src/components/recommondation/recommendation.css
+++ b/portfolio-template/src/components/recommondation/recommendation.css
@@ -41,7 +41,8 @@
   display: flex;
   gap: 0.6rem;
 }
-.recommendation__card h3 {
+.recommendation__card h3,
+h4 {
   font-size: 20px;
   font-weight: 500;
   text-transform: capitalize;
@@ -59,6 +60,7 @@
 .recommendation_author.info {
   display: flex;
   margin-left: 1rem;
+  gap: 0.4rem;
   flex-direction: column;
   justify-content: center;
 }
