--- a/portfolio-template/src/components/portfolio/portfolio.css
+++ b/portfolio-template/src/components/portfolio/portfolio.css
@@ -5,7 +5,6 @@
 .portfolio__nav nav {
   /* background: red; */
 }
-/* .portfolio__nav nav a, */
 .portfolio__nav nav a {
   color: #000;
   text-decoration: none;
@@ -20,11 +19,17 @@
 .portfolio__proj-sample {
   width: 310px;
   height: 300px;
-  background: rgba(255, 180, 0, 0.95);
+  /* background: rgba(255, 180, 0, 0.95); */
   position: relative;
+}
+/* adding bg image and gradient */
+.portfolio__proj-sample.bg {
+  background: linear-gradient(rgba(255, 180, 0, 0.95), rgba(255, 180, 0, 0.95)),
+    url("../../assets/landingP.png");
 }
 .plus_icon {
   position: absolute;
+  font-size: 2rem;
   top: 50%;
   right: 50%;
   transform: translate(50%, -50%);
